<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="30dp"
    android:padding="20dp">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/bmw" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp" >

        <Button
            android:id="@+id/button1"
            android:layout_width="140dp"
            android:backgroundTint="@color/teal_200"
            android:layout_height="wrap_content"
            android:text="@string/btn1" />

        <Space
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/button2"
            android:text="@string/btn2"
            android:backgroundTint="@color/teal_200"
            android:layout_width="140dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:text="@string/text1" />

        <Button
            android:id="@+id/btnRight"
            android:text="@string/btnRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/green" />

        <Button
            android:id="@+id/btnLeft"
            android:text="@string/btnLeft"
            android:layout_gravity="start"
            android:backgroundTint="@color/green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icLeft"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:background="@color/brown"
            app:srcCompat="@drawable/ic_baseline_keyboard_arrow_left_24"
            app:tint="@color/white"></ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/text2"
            android:textColor="@color/black"
            android:textSize="20dp">

        </TextView>

        <ImageView
            android:id="@+id/icRight"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:background="@color/brown"
            app:srcCompat="@drawable/ic_baseline_keyboard_arrow_right_24"
            app:tint="@color/white"></ImageView>

    </LinearLayout>

</LinearLayout>
